--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WFC Plotter Sketch</title>
+    <!-- Link to your custom stylesheet -->
     <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- Load the p5.js library -->
     <script src="libraries/p5.min.js"></script>
-    </head>
+    <!-- Add other p5.js libraries here if you use them, e.g.: -->
+    <!-- <script src="libraries/p5.sound.min.js"></script> -->
+    <!-- <script src="libraries/p5.dom.min.js"></script> -->
+</head>
 <body>
+    <!-- Your p5.js sketch code will be loaded here -->
     <script src="sketch.js"></script>
 </body>
 </html>
