--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>WFC Plotter Sketch</title>
     <!-- Link to your custom stylesheet -->
     <link rel="stylesheet" type="text/css" href="style.css">
-    <!-- Load the p5.js library -->
+    <!-- Load the p5.js library (MUST be loaded first) -->
     <script src="libraries/p5.min.js"></script>
+    <!-- Load the p5.svg.js library (MUST be loaded after p5.min.js, before sketch.js) -->
+    <script src="libraries/p5.svg.js"></script>
     <!-- Add other p5.js libraries here if you use them, e.g.: -->
     <!-- <script src="libraries/p5.sound.min.js"></script> -->
     <!-- <script src="libraries/p5.dom.min.js"></script> -->
